--- a/index.html
+++ b/index.html
@@ -14,165 +14,187 @@
     </head>
     <body>
         <header class="header dark-bg">
-            <a href="./"><img src="./img/logo.svg" width="69" height="56" alt="Логотип Барбершоп"></a>
-            <nav class="">
-                <ul class="list">
-                    <li class=""><a class="link" href="">Услуги и цены</a></li>
-                    <li class=""><a class="link" href="">Мастера</a></li>
-                    <li class=""><a class="link" href="">О нас</a></li>
-                    <li class=""><a class="link" href="">Контакты</a></li>
-                </ul>
-            </nav>
-                    <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-                    <a class="link button" href="">онлайн-запись</a>
+            <div class="container">
+                <nav class="navigation">
+                    <a class="logo" href="./"><img src="./img/logo.svg" width="69" height="56" alt="Логотип Барбершоп"></a>
+                    <ul class="list menu">
+                        <li class="menu-item"><a class="link menu-link" href="">О нас</a></li>
+                        <li class="menu-item"><a class="link menu-link" href="">Услуги и цены</a></li>
+                        <li class="menu-item"><a class="link menu-link" href="">Мастера</a></li>
+                        <li class="menu-item"><a class="link menu-link" href="">Контакты</a></li>
+                    </ul>
+                </nav>
+                        <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+                        <a class="link button" href="">онлайн-запись</a>
+            </div>
         </header>
         <main>
-            <section class="dark-bg">
-                <p class="title-label" lang="eng">A hair salon for men in Kyiv</p>
-                <h1 class="title page-title">BarberShop</h1>
-                <p class="">Мы эксперты в модных мужских стрижках.
-                            Работаем быстро, осторожно и со вкусом.</p>
-                <ul class="list social-list">
-                    <li><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
-                    <li><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
-                </ul>
-            </section>
-            <section class="">
-                <ul class="list">
-                    <li><img src="./img/about/img-1.jpg" alt="Работа Барбера"></li>
-                    <li><img src="./img/about/img-2.jpg" alt="Стильная стрижка 2022"></li>
-                </ul>
-                <div>
-                    <p class="title-label">О нас</p>
-                    <h2 class="title section-title">Лучший Барбершоп твоего города</h2>
-                    <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
-                    <p>Мы команда, которая никогда не останавливается на достигнутом
-                                и жаждет перемен. И когда ты попадешь в руки нашего мастера,
-                                то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы
-                                всегда
-                                готовы усовершенствовать каждого, кто к нам приходит!</p>
-                    <button class="button" type="button">Онлайн-запись</button>
+            <section class="hero dark-bg">
+                <div class="container">
+                    <div class="hero-content">
+                        <p class="title-label" lang="eng">A hair salon for men in Kyiv</p>
+                        <h1 class="title page-title">BarberShop</h1>
+                        <p class="">Мы эксперты в модных мужских стрижках.
+                                Работаем быстро, осторожно и со вкусом.</p>
+                    </div>
+                    <ul class="list social-list">
+                        <li class="social-item"><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
+                        <li class="social-item"><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
+                    </ul>
                 </div>
             </section>
-            <section class="dark-bg">
-                <p class="title-label">Проведи время в компании лучших мастеров</p>
-                <h2 class="title section-title">Услуги и цены</h2>
-                <ul class="list">
-                    <li><span>Мужская стрижка</span><span>от 300 грн.</span></li>
-                    <li><span>Стрижка бороды</span><span>от 200 грн.</span></li>
-                    <li><span>Стрижка усов</span><span>от 200 грн.</span></li>
-                    <li><span>Бритье опасной бритвой</span><span>от 200 грн.</span></li>
-                </ul>
-                <ul class="list">
-                    <li><span>Cтрижка у стажера</span><span>от 50 грн.</span></li>
-                    <li><span>Стрижка под насадку</span><span>от 200 грн.</span></li>
-                    <li><span>Детская стрижка (до 12 лет)</span><span>от 300 грн.</span></li>
-                    <li><span>Камуфлирование седины</span><span>от 200 грн.</span></li>
-                </ul>
-                <a class="link button" href="">Онлайн-Запись</a>
-            </section>
-            <section class="benefits">
-                <ul class="list benefits-list">
-                    <li class="benefits-item">
-                        <span class="benefits-number">600<sup class="benefits-sup">+</sup></span>
-                        <p>Довольных клиентов в день</p>
-                    </li>
-                    <li class="benefits-item">
-                        <span class="benefits-number">50<sup class="benefits-sup">+</sup></span>
-                        <p>Наград за отличный сервис</p>
-                    </li>
-                    <li class="benefits-item">
-                        <span class="benefits-number">20<sup class="benefits-sup">+</sup></span>
-                        <p>Лучших мастеров Киева</p>
-                    </li>
-                    <li class="benefits-item">
-                        <span class="benefits-number">100<sup class="benefits-sup">+</sup></span>
-                        <p>Подарков постоянным клиентам</p>
-                    </li>
-                </ul>
-                <div>
-                    <p class="title-label">старая традиционная школа</p>
-                    <h2 class="title section-title">Почему приходят именно к нам?</h2>
-                    <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+            <section class="section about">
+                <div class="container flexbox">
+                    <ul class="list flexbox content-box">
+                        <li class="content-box"><img src="./img/about/img-1.jpg" alt="Работа Барбера"></li>
+                        <li class="content-box"><img src="./img/about/img-2.jpg" alt="Стильная стрижка 2022"></li>
+                    </ul>
+                    <div class="content-box">
+                        <p class="title-label">О нас</p>
+                        <h2 class="title section-title">Лучший Барбершоп твоего города</h2>
+                        <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+                        <p>Мы команда, которая никогда не останавливается на достигнутом
+                                    и жаждет перемен. И когда ты попадешь в руки нашего мастера,
+                                    то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы
+                                    всегда
+                                    готовы усовершенствовать каждого, кто к нам приходит!</p>
+                        <button class="button" type="button">Онлайн-запись</button>
+                    </div>
                 </div>
             </section>
-            <section class="team">
-                <p class="title-label">для настоящих ценителей атмосферы</p>
-                <h2 class="title section-title">Наши мастера</h2>
-                <ul class="list team-list">
-                    <li class="team-item">
-                        <img src="./img/masters/img1.jpg" width="370" alt="Барбер John Smith">
-                        <h3 class="team-member">John Smith</h3>
-                        <p class="team-member-position">Extreme Barber</p>
-                        <ul class="list">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+            <section class="section  price dark-bg">
+                <div class="container">
+                    <p class="title-label">Проведи время в компании лучших мастеров</p>
+                    <h2 class="title section-title">Услуги и цены</h2>
+                    <div class="price-wrap">
+                        <ul class="list price-list">
+                            <li class="price-item"><span>Мужская стрижка</span><span>от 300 грн.</span></li>
+                            <li class="price-item"><span>Стрижка бороды</span><span>от 200 грн.</span></li>
+                            <li class="price-item"><span>Стрижка усов</span><span>от 200 грн.</span></li>
+                            <li class="price-item"><span>Бритье опасной бритвой</span><span>от 200 грн.</span></li>
                         </ul>
-                    </li>
-                    <li class="team-item">
-                        <img src="./img/masters/img2.jpg" width="370" alt="Барбер Michele Doe">
-                        <h3 class="team-member">Michele Doe</h3>
-                        <p class="team-member-position">Extreme Barber</p>
-                        <ul class="list">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="list price-list">
+                            <li class="price-item"><span>Cтрижка у стажера</span><span>от 50 грн.</span></li>
+                            <li class="price-item"><span>Стрижка под насадку</span><span>от 200 грн.</span></li>
+                            <li class="price-item"><span>Детская стрижка (до 12 лет)</span><span>от 300 грн.</span></li>
+                            <li class="price-item"><span>Камуфлирование седины</span><span>от 200 грн.</span></li>
                         </ul>
-                    </li>
-                    <li class="team-item">
-                        <img src="./img/masters/img3.jpg" width="370" alt="Барбер Alan Black">
-                        <h3 class="team-member">Alan Black</h3>
-                        <p class="team-member-position">Extreme Barber</p>
-                        <ul class="list">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </li>
-                </ul>
+                    </div>
+                    <a class="link button" href="">Онлайн-Запись</a>
+                </div>
             </section>
-            <section>
-                <h2 class="visually-hidden">Портфолио</h2>
-                <p class="title-label">На латинском языке “барба” означает “борода”</p>
-                <ul class="list">
-                    <li><img src="./img/portfolio/img-25.jpg" width="270" alt=""></li>
-                    <li><img src="./img/portfolio/img-26.jpg" width="270" alt=""></li>
-                    <li><img src="./img/portfolio/img-27.jpg" width="270" alt=""></li>
-                    <li><img src="./img/portfolio/img-28.jpg" width="270" alt=""></li>
-                </ul>
+            <section class="benefits section">
+                <div class="container flexbox">
+                    <ul class="list benefits-list content-box">
+                        <li class="benefits-item">
+                            <span class="benefits-number">600<sup class="benefits-sup">+</sup></span>
+                            <p>Довольных клиентов в день</p>
+                        </li>
+                        <li class="benefits-item">
+                            <span class="benefits-number">50<sup class="benefits-sup">+</sup></span>
+                            <p>Наград за отличный сервис</p>
+                        </li>
+                        <li class="benefits-item">
+                            <span class="benefits-number">20<sup class="benefits-sup">+</sup></span>
+                            <p>Лучших мастеров Киева</p>
+                        </li>
+                        <li class="benefits-item">
+                            <span class="benefits-number">100<sup class="benefits-sup">+</sup></span>
+                            <p>Подарков постоянным клиентам</p>
+                        </li>
+                    </ul>
+                    <div class="content-box">
+                        <p class="title-label">старая традиционная школа</p>
+                        <h2 class="title section-title">Почему приходят именно к нам?</h2>
+                        <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="team section">
+                <div class="container">
+                    <p class="title-label">для настоящих ценителей атмосферы</p>
+                    <h2 class="title section-title">Наши мастера</h2>
+                    <ul class="list team-list grid">
+                        <li class="team-item grid-item">
+                            <img src="./img/masters/img1.jpg" width="370" alt="Барбер John Smith">
+                            <h3 class="team-member">John Smith</h3>
+                            <p class="team-member-position">Extreme Barber</p>
+                            <ul class="list">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li>
+                        <li class="team-item grid-item">
+                            <img src="./img/masters/img2.jpg" width="370" alt="Барбер Michele Doe">
+                            <h3 class="team-member">Michele Doe</h3>
+                            <p class="team-member-position">Extreme Barber</p>
+                            <ul class="list">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li>
+                        <li class="team-item grid-item">
+                            <img src="./img/masters/img3.jpg" width="370" alt="Барбер Alan Black">
+                            <h3 class="team-member">Alan Black</h3>
+                            <p class="team-member-position">Extreme Barber</p>
+                            <ul class="list">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="gallery section">
+                <div class="container">
+                    <h2 class="visually-hidden">Портфолио</h2>
+                    <p class="title-label">На латинском языке “барба” означает “борода”</p>
+                    <ul class="list grid">
+                        <li class="grid-item gallery-item"><img src="./img/portfolio/img-25.jpg" width="270" alt=""></li>
+                        <li class="grid-item gallery-item"><img src="./img/portfolio/img-26.jpg" width="270" alt=""></li>
+                        <li class="grid-item gallery-item"><img src="./img/portfolio/img-27.jpg" width="270" alt=""></li>
+                        <li class="grid-item gallery-item"><img src="./img/portfolio/img-28.jpg" width="270" alt=""></li>
+                    </ul>
+                </div>
             </section>
             <div class="dark-bg">
-                <section class="">
-                    <h2 class="title section-title">Онлайн-запись</h2>
-                </section>
-                <section>
-                    <h2 class="title section-title">Контакты</h2>
-                    <address>
-                        <ul class="list">
-                            <li><a class="link" href="https://goo.gl/maps/jJzeuJFhVTPg2ui97" target="_blank" rel="noopener noreferer">ул.
-                                            Васильковая, 7А
-                                            Киев, 08132</a></li>
-                            <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
-                            <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
-                        </ul>
-                    </address>
-                </section>
-                <section>
-                    <h3 class="title-label">время работы</h3>
-                    <p class="">Ежедневно с 9:00 до 22:00</p>
-                </section>
+                <div class="container flexbox">
+                    <section class="section content-box">
+                        <h2 class="title section-title">Онлайн-запись</h2>
+                    </section>
+                    <section class="section content-box">
+                        <h2 class="title section-title">Контакты</h2>
+                        <address>
+                            <ul class="list">
+                                <li><a class="link" href="https://goo.gl/maps/jJzeuJFhVTPg2ui97" target="_blank" rel="noopener noreferer">ул.
+                                                Васильковая, 7А
+                                                Киев, 08132</a></li>
+                                <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                                <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                            </ul>
+                        </address>
+                        <section>
+                            <h3 class="title-label">время работы</h3>
+                            <p class="">Ежедневно с 9:00 до 22:00</p>
+                        </section>
+                    </section>
+                </div>
             </div>
         </main>
         <footer class="">
-            <p class="copyright">&copy; Copyright 2020</p>
-            <ul class="list social-list">
-                <li><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
-                <li><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
-            </ul>
+            <div class="container">
+                <p class="copyright">&copy; Copyright 2020</p>
+                <ul class="list social-list">
+                    <li class="social-item"><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
+                    <li class="social-item"><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
+                </ul>
+            </div>
         </footer>
     </body>
     </html>
